JS-45: Add more functionality in job-state-status-bar

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -282,7 +282,7 @@
   "profile.form.presentation.validation": "يجب ذكر تقديم",
   "profile.form.languages.validation": "يجب ذكر المعلومات اللغوية",
   "user.apply.confirmation": "لقد تقدمت لهذه الوظيفة.",
-  "user.apply.confirmation.text.": "نحن ضمن وصلتُ لتوّي ننتظر بشغف  إذا أرسل مستلم الوظيفة عرض عندك 12 ساعة لتوافق على الوظيفة تجد الوظيفة تحت خانة وظائفي حيث توجد كل المكالمات بينك وبين مانح الوظيفة",
+  "user.apply.confirmation.text": "نحن ضمن وصلتُ لتوّي ننتظر بشغف  إذا أرسل مستلم الوظيفة عرض عندك 12 ساعة لتوافق على الوظيفة تجد الوظيفة تحت خانة وظائفي حيث توجد كل المكالمات بينك وبين مانح الوظيفة",
   "user.apply.find_more": "جِد عدة وظائف",
   "user.account": "بيانات الحساب البنكي",
   "user.account.description": "أين ترغب أن يتم دفع راتبك عند إنتهاء العمل؟",
