--- a/i18n/fa.json
+++ b/i18n/fa.json
@@ -282,7 +282,7 @@
   "profile.form.presentation.validation": "در اینجا باید شرحی بنویسید",
   "profile.form.languages.validation": "در اینجا باید معلومات خود در زبان را بنویسید",
   "user.apply.confirmation": "You have applied for the job",
-  "user.apply.confirmation.text.": "ما کارکنان Just Arrived امیدوار هستیم کار انجام شود. اگر متقاضی انجام کار، پیشنهادی برای شما ارسال نماید، شما 18 ساعت وقت دارید  آن را قبول کنید. ماموریت کاری مربوطه را در بخش «ماموریت های کاری من» می‌یابید. در آنجا همچنین همه ارتباطاتی که با کارفرما داشته‌اید، جمع‌آوری می‌شود.",
+  "user.apply.confirmation.text": "ما کارکنان Just Arrived امیدوار هستیم کار انجام شود. اگر متقاضی انجام کار، پیشنهادی برای شما ارسال نماید، شما 18 ساعت وقت دارید  آن را قبول کنید. ماموریت کاری مربوطه را در بخش «ماموریت های کاری من» می‌یابید. در آنجا همچنین همه ارتباطاتی که با کارفرما داشته‌اید، جمع‌آوری می‌شود.",
   "user.apply.find_more": "ماموریت‌های کاری دیگری پیدا کنید",
   "user.account": "Bank account details",
   "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
