--- a/i18n/ti.json
+++ b/i18n/ti.json
@@ -282,7 +282,7 @@
   "profile.form.presentation.validation": "Du måste ange presentation",
   "profile.form.languages.validation": "Du måste ange språkkunskaper",
   "user.apply.confirmation": "You have applied for the job",
-  "user.apply.confirmation.text.": "Vi på Just Arrived håller tummarna. Om uppdragstagaren skickar ett erbjudande har du 18 timmar på dig att tacka ja till uppdraget. Du hittar uppdraget under Mina Uppdrag. Där samlas även all kommunikation som sker med uppdragsgivaren.",
+  "user.apply.confirmation.text": "Vi på Just Arrived håller tummarna. Om uppdragstagaren skickar ett erbjudande har du 18 timmar på dig att tacka ja till uppdraget. Du hittar uppdraget under Mina Uppdrag. Där samlas även all kommunikation som sker med uppdragsgivaren.",
   "user.apply.find_more": "Karên din peyda bike",
   "user.account": "Bank account details",
   "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
