Implemented home view with grid

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -43,8 +43,10 @@
   "common.error.404": "Page not found",
   "common.or": "or",
   "common.view_profile": "Preview profile",
+  "common.edit_profile": "Edit profil",
   "common.gross_salary": "gross salary",
   "common.net_salary": "after tax",
+  "common.welcome_user": "Welcome {{username}}!",
   "menu.language.title": "Select language",
   "menu.language.text_1": "You can go back and change your selected language later if you like.",
   "menu.language.text_2": "Jobs, comments and messages are translated automatically.",
