--- a/i18n/en.json
+++ b/i18n/en.json
@@ -43,7 +43,7 @@
   "common.error.404": "Page not found",
   "common.or": "or",
   "common.view_profile": "Preview profile",
-  "common.edit_profile": "Edit profil",
+  "common.edit_profile": "Edit profile",
   "common.gross_salary": "gross salary",
   "common.net_salary": "after tax",
   "common.welcome_user": "Welcome {{username}}!",
