--- a/i18n/en.json
+++ b/i18n/en.json
@@ -100,7 +100,7 @@
   "start.steps_section.step_3": "Pay when your job is completed",
   "start.steps_section.step_4": "We take care of employer contributions and social costs",
   "start.instruction_section.title": "This is how you get started",
-  "start.instruction_section.slide_1.title": "This is how it works for employees:",
+  "start.instruction_section.slide_1.title": "This is how it works:",
   "start.instruction_section.slide_1.text_1": "Search for jobs near you",
   "start.instruction_section.slide_1.text_2": "Do job",
   "start.instruction_section.slide_1.text_3": "Get paid within two weeks",
