--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -129,8 +129,11 @@
   "contact.form.email": "Email",
   "contact.form.message": "Message",
   "contact.form.name.validation": "You need to enter your name",
+  "contact.form.name.validation.length": "Your name must be at least 2 characters long",
   "contact.form.email.validation": "You need to enter your email",
+  "contact.form.email.validation.length": "Your email must be at least 6 characters long",
   "contact.form.message.validation": "You need to enter a message",
+  "contact.form.message.validation.length": "Your message must be at least 2 characters long",
   "contact.confirmation.title": "Thanks for your message! We will reply as soon as we can.",
   "contact.confirmation.navigate.back": "Back to contact",
   "assignment": "Job",
