implement translation component and replace all text occurencies

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -44,6 +44,7 @@
   "common.view_profile": "عرض الملف الشخصي",
   "common.gross_salary": "الراتب الإجمالي",
   "common.net_salary": "بعد خصم الضرائب",
+  "common.translate": "Translate",
   "menu.language.title": "اِختار لغة",
   "menu.language.text_1": "يمكنك العودة الى الوراء وتغيير اللغة في وقت لاحق إذا أردت",
   "menu.language.text_2": "وظائف، تعليقات ورسائل تُترجم تلقائيا",
