--- a/src/assets/i18n/fa_AF.json
+++ b/src/assets/i18n/fa_AF.json
@@ -44,6 +44,7 @@
   "common.view_profile": "Visa profil",
   "common.gross_salary": "gross salary",
   "common.net_salary": "after tax",
+  "common.translate": "Translate",
   "menu.language.title": "زبان خود را انتخاب کنید",
   "menu.language.text_1": "شما در صورت تمایل می توانید به صفحه اصلی برگشته و زبان خود را تغییر دهید.",
   "menu.language.text_2": "ماموریت، نظرات و پیام‌ها بطور اتوماتیک ترجمه می‌شود",
