--- a/src/assets/i18n/ps.json
+++ b/src/assets/i18n/ps.json
@@ -44,6 +44,7 @@
   "common.view_profile": "Visa profil",
   "common.gross_salary": "gross salary",
   "common.net_salary": "after tax",
+  "common.translate": "Translate",
   "menu.language.title": "د ژبې انتخاب کول",
   "menu.language.text_1": "تاسې کولی شئ بیرته لاړ شئ او وروسته ژبه بدل کړئ که تاسو غواړئ.",
   "menu.language.text_2": "ګومارنې، نظریات او پیغامونه په اتومات ډول ژباړل کیږي.",
