--- a/src/assets/i18n/ku.json
+++ b/src/assets/i18n/ku.json
@@ -44,6 +44,7 @@
   "common.view_profile": "Visa profil",
   "common.gross_salary": "gross salary",
   "common.net_salary": "after tax",
+  "common.translate": "Translate",
   "menu.language.title": "Zimanî bibijêre",
   "menu.language.text_1": "Tu dikarî vegerî û paşê zimanî biguherînî heger bixwazî.",
   "menu.language.text_2": "Kar, têbînî û peyam otomatîk tên wergerandin.",
