--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -40,6 +40,7 @@
   "common.thanks": "شكرًا!",
   "common.updated": "مستحدث",
   "common.error.404": "صفحة غير موجودة",
+  "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "common.or": "eller",
   "common.view_profile": "عرض الملف الشخصي",
   "common.gross_salary": "الراتب الإجمالي",
