--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -42,6 +42,7 @@
   "common.thanks": "Thank you!",
   "common.updated": "Updated",
   "common.error.404": "Page not found",
+  "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "common.or": "or",
   "common.view_profile": "Preview profile",
   "common.edit_profile": "Edit profile",
