--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -40,6 +40,7 @@
   "common.thanks": "ممنون!",
   "common.updated": "به روز شده",
   "common.error.404": "صفحه پیدا نشد",
+  "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "common.or": "یا",
   "common.view_profile": "Preview profile",
   "common.gross_salary": "gross salary",
