--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -40,6 +40,7 @@
   "common.thanks": "Tack!",
   "common.updated": "Uppdaterad",
   "common.error.404": "Page not found",
+  "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "common.or": "eller",
   "common.view_profile": "Visa profil",
   "common.gross_salary": "bruttolön",
