--- a/src/assets/i18n/ti.json
+++ b/src/assets/i18n/ti.json
@@ -40,6 +40,7 @@
   "common.thanks": "Thank you!",
   "common.updated": "Updated",
   "common.error.404": "Page not found",
+  "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "common.or": "or",
   "common.view_profile": "Preview profile",
   "common.gross_salary": "gross salary",
