Add missing translation of "edit profile" in arabic

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -43,6 +43,7 @@
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "common.or": "eller",
   "common.view_profile": "عرض الملف الشخصي",
+  "common.edit_profile": "تعديل الملف الشخصي",
   "common.gross_salary": "الراتب الإجمالي",
   "common.net_salary": "بعد خصم الضرائب",
   "common.translate": "Translate",
