design of profile settings

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -305,6 +305,25 @@
   "profile.form.photo.validation": "You need to upload a profile picture",
   "profile.form.presentation.validation": "You need to provide a presentation",
   "profile.form.languages.validation": "You need to provide language abilities",
+  "user.profile.form.native.language.label": "Native language",
+  "user.profile.form.native.language.placeholder": "Select Language",
+  "user.profile.form.country.label": "Country of origin",
+  "user.profile.form.country.placeholder": "Select Country",
+  "user.profile.form.permit.label": "Residence permit",
+  "user.profile.form.permit.type.label": "What type of residence permit?",
+  "user.profile.form.permit.type.placeholder": "Type of permit",
+  "user.profile.form.permit.upload.button": "Upload",
+  "user.profile.form.permit.upload.description": "Upload photo of residence permit",
+  "user.profile.form.permit.upload.description": "Upload photo of residence permit",
+  "user.profile.form.languages.label": "Other language skills",
+  "user.profile.form.languages.placeholder": "Select Languages",
+  "user.profile.form.skills.label": "General skills",
+  "user.profile.form.skills.placeholder": "Please tell us about your skills",
+  "user.profile.form.work.experience.label": "Work experience",
+  "user.profile.form.work.experience.placeholder": "Please tell us about your work experience",
+  "user.profile.form.resume.upload.button": "Upload",
+  "user.profile.form.resume.upload.description": "Upload your resume",
+  "user.profile.form.submit.button": "Save profile changes",
   "user.apply.confirmation": "You have applied for the job",
   "user.apply.confirmation.text": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Jobs. This is where you'll also find all communication that happens between you and the employer.",
   "user.apply.find_more": "Search for more jobs",
