Save feedback and validation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -311,7 +311,8 @@
   "user.profile.form.country.placeholder": "Select Country",
   "user.profile.form.permit.label": "Residence permit",
   "user.profile.form.permit.type.label": "What type of residence permit?",
-  "user.profile.form.permit.type.placeholder": "Type of permit",
+  "user.profile.form.permit.type.asylum": "Asylum seeker",
+  "user.profile.form.permit.type.permanent": "Permanent residence",
   "user.profile.form.permit.upload.button": "Upload",
   "user.profile.form.permit.upload.description": "Upload photo of residence permit",
   "user.profile.form.permit.upload.description": "Upload photo of residence permit",
@@ -324,6 +325,8 @@
   "user.profile.form.resume.upload.button": "Upload",
   "user.profile.form.resume.upload.description": "Upload your resume",
   "user.profile.form.submit.button": "Save profile changes",
+  "user.profile.form.submit.success": "Your profile was updated successfully!",
+  "user.profile.form.submit.incomplete": "Please fill in all the required fields.",
   "user.apply.confirmation": "You have applied for the job",
   "user.apply.confirmation.text": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Jobs. This is where you'll also find all communication that happens between you and the employer.",
   "user.apply.find_more": "Search for more jobs",
