added temporrary residence with work permit option

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -309,13 +309,13 @@
   "user.profile.form.native.language.placeholder": "Select Language",
   "user.profile.form.country.label": "Country of origin",
   "user.profile.form.country.placeholder": "Select Country",
-  "user.profile.form.permit.label": "Residence permit",
-  "user.profile.form.permit.type.label": "What type of residence permit?",
+  "user.profile.form.permit.label": "Permit to work",
+  "user.profile.form.permit.type.label": "What type of permit?",
   "user.profile.form.permit.type.asylum": "Asylum seeker",
   "user.profile.form.permit.type.permanent": "Permanent residence",
+  "user.profile.form.permit.type.temporary": "Temporary residence with work permit",
   "user.profile.form.permit.upload.button": "Upload",
-  "user.profile.form.permit.upload.description": "Upload photo of residence permit",
-  "user.profile.form.permit.upload.description": "Upload photo of residence permit",
+  "user.profile.form.permit.upload.description": "Upload photo of permit",
   "user.profile.form.languages.label": "Other language skills",
   "user.profile.form.languages.placeholder": "Select Languages",
   "user.profile.form.skills.label": "General skills",
