--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -305,6 +305,10 @@
   "profile.form.photo.validation": "You need to upload a profile picture",
   "profile.form.presentation.validation": "You need to provide a presentation",
   "profile.form.languages.validation": "You need to provide language abilities",
+  "user.profile.header.title": "Profile",
+  "user.profile.header.information": "Remember that a complete profile increases your chances of getting jobs",
+  "user.profile.tab.profile.details.title": "Profile details",
+  "user.profile.tab.personal.details.title": "Personal details",
   "user.profile.form.native.language.label": "Native language",
   "user.profile.form.native.language.placeholder": "Select Language",
   "user.profile.form.country.label": "Country of origin",
