--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -320,6 +320,7 @@
   "user.profile.form.permit.type.temporary": "Temporary residence with work permit",
   "user.profile.form.permit.upload.button": "Upload",
   "user.profile.form.permit.upload.description": "Upload photo of permit",
+  "user.profile.form.permit.upload.uploaded": "Photo of permit has been uploaded",
   "user.profile.form.languages.label": "Other language skills",
   "user.profile.form.languages.placeholder": "Select Languages",
   "user.profile.form.skills.label": "General skills",
