--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -311,13 +311,16 @@
   "user.profile.tab.personal.details.title": "Personal details",
   "user.profile.form.native.language.label": "Native language",
   "user.profile.form.native.language.placeholder": "Select Language",
+  "user.profile.form.native.language.validation.required": "Native language is required",
   "user.profile.form.country.label": "Country of origin",
   "user.profile.form.country.placeholder": "Select Country",
+  "user.profile.form.country.validation.required": "Country of origin is required",
   "user.profile.form.permit.label": "Permit to work",
   "user.profile.form.permit.type.label": "What type of permit?",
   "user.profile.form.permit.type.asylum": "Asylum seeker",
   "user.profile.form.permit.type.permanent": "Permanent residence",
   "user.profile.form.permit.type.temporary": "Temporary residence with work permit",
+  "user.profile.form.permit.type.validation.required": "Please select a permit type",
   "user.profile.form.permit.upload.button": "Upload",
   "user.profile.form.permit.upload.description": "Upload photo of permit",
   "user.profile.form.permit.upload.uploaded": "Photo of permit has been uploaded",
@@ -331,7 +334,6 @@
   "user.profile.form.resume.upload.description": "Upload your resume",
   "user.profile.form.submit.button": "Save profile changes",
   "user.profile.form.submit.success": "Your profile was updated successfully!",
-  "user.profile.form.submit.incomplete": "Please fill in all the required fields.",
   "user.profile.form.submit.error": "Could not save:",
   "user.profile.form.submit.error.nothing": "No details provided",
   "user.settings.form.bank.details.header": "Bank details",
