Server side validation errors displayed next to input fields

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -334,8 +334,7 @@
   "user.profile.form.resume.upload.description": "Upload your resume",
   "user.profile.form.submit.button": "Save profile changes",
   "user.profile.form.submit.success": "Your profile was updated successfully!",
-  "user.profile.form.submit.error": "Could not save:",
-  "user.profile.form.submit.error.nothing": "No details provided",
+  "user.profile.form.submit.fail": "There are some errors, please review them above.",
   "user.settings.form.bank.details.header": "Bank details",
   "user.settings.form.personal.info.header": "Personal information",
   "user.settings.form.change.password.header": "Password",
@@ -367,8 +366,7 @@
   "user.settings.form.account.number.placeholder": "Account number",
   "user.settings.form.submit.button": "Save profile changes",
   "user.settings.form.submit.success": "Your profile was updated successfully!",
-  "user.settings.form.submit.error": "Could not save:",
-  "user.settings.form.submit.error.nothing": "No details provided",
+  "user.settings.form.submit.fail": "There are some errors, please review them above.",
   "user.apply.confirmation": "You have applied for the job",
   "user.apply.confirmation.text": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Jobs. This is where you'll also find all communication that happens between you and the employer.",
   "user.apply.find_more": "Search for more jobs",
