Only submit profile data that is in the form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -323,7 +323,8 @@
   "user.profile.form.permit.type.validation.required": "Please select a permit type",
   "user.profile.form.permit.upload.button": "Upload",
   "user.profile.form.permit.upload.description": "Upload photo of permit",
-  "user.profile.form.permit.upload.uploaded": "Photo of permit has been uploaded",
+  "user.profile.form.permit.upload.success": "Photo of permit has been uploaded",
+  "user.profile.form.permit.upload.fail": "Photo of permit could not be uploaded",
   "user.profile.form.languages.label": "Other language skills",
   "user.profile.form.languages.placeholder": "Select Languages",
   "user.profile.form.skills.label": "General skills",
