--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -320,6 +320,7 @@
   "user.profile.form.permit.type.asylum": "Asylum seeker",
   "user.profile.form.permit.type.permanent": "Permanent residence",
   "user.profile.form.permit.type.temporary": "Temporary residence with work permit",
+  "user.profile.form.permit.type.student": "Student visa",
   "user.profile.form.permit.type.validation.required": "Please select a permit type",
   "user.profile.form.permit.upload.button": "Upload",
   "user.profile.form.permit.upload.description": "Upload photo of permit",
