--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -328,8 +328,10 @@
   "user.profile.form.permit.upload.fail": "Photo of permit could not be uploaded",
   "user.profile.form.languages.label": "Other language skills",
   "user.profile.form.languages.placeholder": "Select Languages",
-  "user.profile.form.skills.label": "General skills",
-  "user.profile.form.skills.placeholder": "Please tell us about your skills",
+  "user.profile.form.skills.label": "Skills",
+  "user.profile.form.skills.placeholder": "Select Skills",
+  "user.profile.form.general.skills.label": "General skills",
+  "user.profile.form.general.skills.placeholder": "Please tell us about your skills",
   "user.profile.form.work.experience.label": "Work experience",
   "user.profile.form.work.experience.placeholder": "Please tell us about your work experience",
   "user.profile.form.resume.upload.button": "Upload",
