Atleast added proficiency strings to i18n. However autocomplete dropdown does not support translations.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -454,6 +454,17 @@
   "promo.description": "At the moment, Just Arrived is only availible for invited users. If you are interested in using the platform, please sign up on www.justarrived.se for the official launch in the autumn of 2016. ",
   "job.more_detail.text": "For more details on the job",
   "language.proficiency.placeholder": "Select language proficiency",
+  "language.proficiency.1": "Beginner",
+  "language.proficiency.2": "Basic knowledge",
+  "language.proficiency.3": "Working proficiency",
+  "language.proficiency.4": "Professional proficiency",
+  "language.proficiency.5": "Native speaker",
+  "skill.proficiency.placeholder": "Select skill proficiency",
+  "skill.proficiency.1": "Beginner",
+  "skill.proficiency.2": "Basic knowledge",
+  "skill.proficiency.3": "Intermediate knowledge",
+  "skill.proficiency.4": "Professional",
+  "skill.proficiency.5": "Expert",
   "map.geolocation.error.prefix": "Your location could not be established because",
   "map.geolocation.error.unsupportedBrowser": "your browser does not support location services.",
   "map.geolocation.error.permissionDenied": "you have disabled access to your location for this site.",
