--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -470,5 +470,7 @@
   "map.geolocation.error.permissionDenied": "you have disabled access to your location for this site.",
   "map.geolocation.error.positionUnavailable": "we are unable to determine your location.",
   "map.geolocation.error.timeout": "service timeout has been reached.",
-  "map.geolocation.error.close": "Click to hide."
+  "map.geolocation.error.close": "Click to hide.",
+  "home_page.new_jobs_slider.title": "New jobs",
+  "home_page.user_jobs_slider.title": "Your jobs"
 }
