--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -315,17 +315,33 @@
   "user.profile.form.country.label": "Country of origin",
   "user.profile.form.country.placeholder": "Select Country",
   "user.profile.form.country.validation.required": "Country of origin is required",
-  "user.profile.form.permit.label": "Permit to work",
-  "user.profile.form.permit.type.label": "What type of permit?",
-  "user.profile.form.permit.type.asylum": "Asylum seeker",
-  "user.profile.form.permit.type.permanent": "Permanent residence",
-  "user.profile.form.permit.type.temporary": "Temporary residence with work permit",
-  "user.profile.form.permit.type.student": "Student visa",
-  "user.profile.form.permit.type.validation.required": "Please select a permit type",
-  "user.profile.form.permit.upload.button": "Upload",
-  "user.profile.form.permit.upload.description": "Upload photo of permit",
-  "user.profile.form.permit.upload.success": "Photo of permit has been uploaded",
-  "user.profile.form.permit.upload.fail": "Photo of permit could not be uploaded",
+  "user.profile.form.status.label": "Current status",
+  "user.profile.form.status.asylum": "Asylum seeker",
+  "user.profile.form.status.permanent": "Permanent residence",
+  "user.profile.form.status.temporary": "Temporary residence with work permit",
+  "user.profile.form.status.student": "Student visa",
+  "user.profile.form.status.validation.required": "Please select a permit type",
+  "user.profile.form.residence.permit.upload.button": "Upload",
+  "user.profile.form.residence.permit.upload.description": "Upload photo of permit",
+  "user.profile.form.residence.permit.upload.success": "Photo of permit has been uploaded",
+  "user.profile.form.residence.permit.upload.fail": "Photo of permit could not be uploaded",
+  "user.profile.form.at.und.label": "AT-UND",
+  "user.profile.form.at.und.required": "Please select if you have an AT-UND permit",
+  "user.profile.form.got.coordination.number.label": "Coordination number",
+  "user.profile.form.got.coordination.number.required": "Please select if you have a coordination number",
+  "user.profile.form.coordination.number.label": "Please provide the coordination number",
+  "user.profile.form.coordination.number.placeholder": "Coordination number",
+  "user.profile.form.coordination.number.required": "Please provide the coordination number",
+  "user.profile.form.lma.upload.button": "Upload",
+  "user.profile.form.lma.upload.description": "Upload photo of LMA card",
+  "user.profile.form.lma.upload.success": "Photo of LMA card has been uploaded",
+  "user.profile.form.lma.upload.fail": "Photo of LMA card could not be uploaded",
+  "user.profile.form.lma.upload.required": "Please upload a photo of your LMA card",
+  "user.profile.form.skatteverket.certificate.upload.button": "Upload",
+  "user.profile.form.skatteverket.certificate.upload.description": "Upload photo of coordination number certificate (from the swedish tax agency)",
+  "user.profile.form.skatteverket.certificate.upload.success": "Photo of coordination number certificate has been uploaded",
+  "user.profile.form.skatteverket.certificate.upload.fail": "Photo of coordination number certificate could not be uploaded",
+  "user.profile.form.skatteverket.certificate.upload.required": "Please upload a photo of your coordination number certificate",
   "user.profile.form.languages.label": "Other language skills",
   "user.profile.form.languages.placeholder": "Select Languages",
   "user.profile.form.skills.label": "Skills",
