Added new strings
Added strings for “application” (singular), “Log in to apply” and
“Create an account”

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -214,6 +214,7 @@
   "company.assignments.latest_activity.": "Recent activity",
   "company.assignments.comments": "comments",
   "company.assignments.applications": "applications",
+  "company.assignments.application": "application",
   "company.assignments.candidates": "Candidates",
   "company.assignments.candidates.select": "Select who you would like to hire.",
   "company.assignments.candidates.select.title": "Select candidate",
@@ -412,6 +413,8 @@
   "assignment.status.successful": "Job accepted",
   "assignment.status.invoice": "We will send an invoice shortly.",
   "assignment.status.apply": "Apply for job",
+  "assignment.status.log_in": "Log in to apply",
+  "assignment.status.create_account": "Create an account",
   "assignment.status.applied": "You have applied for this job",
   "assignment.status.applied.description": "Once your email is confirmed, your application will be visible to employers",
   "assignment.status.question_asked": "You have asked a question about this job",
