Added uppercase pipe instead of uppercase translation item

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -473,6 +473,6 @@
   "map.geolocation.error.close": "Click to hide.",
   "home_page.new_jobs_slider.title": "New jobs",
   "home_page.user_jobs_slider.title": "My jobs",
-  "home_page.user_jobs_slider_item.status.finished": "FINISHED",
-  "home_page.user_jobs_slider_item.status.ongoing": "ONGOING"
+  "home_page.user_jobs_slider_item.status.finished": "Finnished",
+  "home_page.user_jobs_slider_item.status.ongoing": "Ongoing"
 }
