Added more job-strings

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -169,8 +169,11 @@
   "assignment.rate.low": "minimum",
   "assignment.rate.medium": "Recommended",
   "assignment.rate.high": "Generous",
+  "assignment.rate.gross_salary": "gross salary",
+  "assignment.hour": "Hour",
   "assignment.hours": "Hours",
   "assignment.report": "Report to admin",
+  "assignment.after_tax": "after tax",
   "assignment.assignments.title": "Job",
   "assignment.comments.title": "Comments",
   "assignment.comments.description": "Write a comment",
