User profile view updated to ask questions relevant to the users current status

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -320,29 +320,42 @@
   "user.profile.form.status.permanent": "Permanent residence",
   "user.profile.form.status.temporary": "Temporary residence with work permit",
   "user.profile.form.status.student": "Student visa",
-  "user.profile.form.status.validation.required": "Please select a permit type",
-  "user.profile.form.residence.permit.upload.button": "Upload",
-  "user.profile.form.residence.permit.upload.description": "Upload photo of permit",
-  "user.profile.form.residence.permit.upload.success": "Photo of permit has been uploaded",
-  "user.profile.form.residence.permit.upload.fail": "Photo of permit could not be uploaded",
-  "user.profile.form.residence.permit.upload.required": "Please upload a photo of your permit",
+  "user.profile.form.residence.permit.front.upload.button": "Upload",
+  "user.profile.form.residence.permit.front.upload.description": "Upload front photo of residence permit",
+  "user.profile.form.residence.permit.front.upload.success": "Front photo of residence permit has been uploaded",
+  "user.profile.form.residence.permit.front.upload.fail": "Front photo of residence permit could not be uploaded",
+  "user.profile.form.residence.permit.back.upload.button": "Upload",
+  "user.profile.form.residence.permit.back.upload.description": "Upload back photo of residence permit",
+  "user.profile.form.residence.permit.back.upload.success": "Back photo of residence permit has been uploaded",
+  "user.profile.form.residence.permit.back.upload.fail": "Back photo of residence permit could not be uploaded",
+  "user.profile.form.work.permit.front.upload.button": "Upload",
+  "user.profile.form.work.permit.front.upload.description": "Upload front photo of work permit",
+  "user.profile.form.work.permit.front.upload.success": "Front photo of work permit has been uploaded",
+  "user.profile.form.work.permit.front.upload.fail": "Front photo of work permit could not be uploaded",
+  "user.profile.form.work.permit.back.upload.button": "Upload",
+  "user.profile.form.work.permit.back.upload.description": "Upload back photo of work permit",
+  "user.profile.form.work.permit.back.upload.success": "Back photo of work permit has been uploaded",
+  "user.profile.form.work.permit.back.upload.fail": "Back photo of work permit could not be uploaded",
+  "user.profile.form.personal.id.upload.button": "Upload",
+  "user.profile.form.personal.id.upload.description": "Upload photo of personal id card",
+  "user.profile.form.personal.id.upload.success": "Photo of personal id has been uploaded",
+  "user.profile.form.personal.id.upload.fail": "Photo of personal id could not be uploaded",
   "user.profile.form.at.und.label": "AT-UND",
-  "user.profile.form.at.und.required": "Please select if you have an AT-UND permit",
   "user.profile.form.got.coordination.number.label": "Coordination number",
-  "user.profile.form.got.coordination.number.required": "Please select if you have a coordination number",
   "user.profile.form.coordination.number.label": "Please provide the coordination number",
   "user.profile.form.coordination.number.placeholder": "Coordination number",
-  "user.profile.form.coordination.number.required": "Please provide the coordination number",
+  "user.profile.form.coordination.number.or.ssn.label": "Social security number or coordination number",
+  "user.profile.form.coordination.number.or.ssn.placeholder": "Social security number or coordination number",
+  "user.profile.form.ssn.label": "Social security number",
+  "user.profile.form.ssn.placeholder": "Social security number",
   "user.profile.form.lma.upload.button": "Upload",
   "user.profile.form.lma.upload.description": "Upload photo of LMA card",
   "user.profile.form.lma.upload.success": "Photo of LMA card has been uploaded",
   "user.profile.form.lma.upload.fail": "Photo of LMA card could not be uploaded",
-  "user.profile.form.lma.upload.required": "Please upload a photo of your LMA card",
   "user.profile.form.skatteverket.certificate.upload.button": "Upload",
   "user.profile.form.skatteverket.certificate.upload.description": "Upload photo of coordination number certificate (from the swedish tax agency)",
   "user.profile.form.skatteverket.certificate.upload.success": "Photo of coordination number certificate has been uploaded",
   "user.profile.form.skatteverket.certificate.upload.fail": "Photo of coordination number certificate could not be uploaded",
-  "user.profile.form.skatteverket.certificate.upload.required": "Please upload a photo of your coordination number certificate",
   "user.profile.form.languages.label": "Other language skills",
   "user.profile.form.languages.placeholder": "Select Languages",
   "user.profile.form.skills.label": "Skills",
