--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -383,6 +383,7 @@
   "user.settings.form.email.label": "Email",
   "user.settings.form.email.placeholder": "Email",
   "user.settings.form.email.validation.required": "Email is required",
+  "user.settings.form.email.validation.pattern": "That is not a valid email",
   "user.settings.form.phone.label": "Phone",
   "user.settings.form.phone.placeholder": "Phone",
   "user.settings.form.phone.validation.required": "Phone number is required",
@@ -401,6 +402,56 @@
   "user.settings.form.submit.button": "Save profile changes",
   "user.settings.form.submit.success": "Your profile was updated successfully!",
   "user.settings.form.submit.fail": "There are some errors, please review them above.",
+  "user.settings.form.address.header": "Address",
+  "user.settings.form.street.placeholder": "Street",
+  "user.settings.form.zip.placeholder": "Zip code",
+  "user.settings.form.city.placeholder": "City",
+  "user.register.title": "Sign up",
+  "user.register.form.first.name.header": "First name",
+  "user.register.form.last.name.header": "Last name",
+  "user.register.form.email.header": "Email",
+  "user.register.form.phone.header": "Phone",
+  "user.register.form.address.header": "Address",
+  "user.register.form.native.language.header": "Native language",
+  "user.register.form.country.of.origin.header": "Country of origin",
+  "user.register.form.password.header": "Password",
+  "user.register.form.submit.button": "Sign up",
+  "user.register.form.terms.accept": "I accept Just Arrived's terms, conditions and employment contract",
+  "user.register.form.terms.validation.required": "To signup you have to agree to the terms above",
+  "user.register.form.first.name.label": "First name",
+  "user.register.form.first.name.placeholder": "First name",
+  "user.register.form.first.name.validation.required": "First name is required",
+  "user.register.form.first.name.validation.min.length": "First name must be atleast 2 characters long",
+  "user.register.form.last.name.label": "Last name",
+  "user.register.form.last.name.placeholder": "Last name",
+  "user.register.form.last.name.validation.required": "Last name is required",
+  "user.register.form.last.name.validation.min.length": "Last name must be atleast 2 characters long",
+  "user.register.form.email.label": "Email",
+  "user.register.form.email.placeholder": "Email",
+  "user.register.form.email.validation.required": "Email is required",
+  "user.register.form.email.validation.pattern": "That is not a valid email",
+  "user.register.form.phone.label": "Phone",
+  "user.register.form.phone.placeholder": "Phone",
+  "user.register.form.phone.validation.required": "Phone number is required",
+  "user.register.form.phone.validation.min.length": "Phone number must be atleast 9 characters long",
+  "user.register.form.phone.validation.pattern": "Must be a swedish phone number starting with +46",
+  "user.register.form.password.placeholder": "Password",
+  "user.register.form.password.validation.min.length": "Password must be atleast 6 characters long",
+  "user.register.form.repeat.password.placeholder": "Repeat password",
+  "user.register.form.repeat.password.validation.mismatch": "Supplied passwords does not match",
+  "user.register.form.country.of.origin.placeholder": "Country of origin",
+  "user.register.form.country.of.origin.required": "Please choose your country of origin",
+  "user.register.form.native.language.placeholder": "Native language",
+  "user.register.form.native.language.required": "Please choose your native language",
+  "user.register.form.street.placeholder": "Street",
+  "user.register.form.zip.placeholder": "Zip code",
+  "user.register.form.city.placeholder": "City",
+  "user.register.form.default.language.header": "Default language",
+  "user.register.form.default.language.placeholder": "Default language",
+  "user.register.form.default.language.required": "Please choose the default language",
+  "user.register.form.default.language.description": "This is the language we will use to communicate with you",
+  "user.register.form.submit.fail": "There are some errors, please review them above.",
+  "user.register.form.submit.success": "Your account was successfully created. You can now use it to login.",
   "user.apply.confirmation": "You have applied for the job",
   "user.apply.confirmation.text": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Jobs. This is where you'll also find all communication that happens between you and the employer.",
   "user.apply.find_more": "Search for more jobs",
