Added sign-in-button to start page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,6 +62,7 @@
   "menu.main.login": "Log in",
   "menu.main.logout": "Log out",
   "menu.main.create_account": "Create account",
+  "menu.main.sign_in": "Sign in",
   "menu.main.create_account.choose": "User or company?",
   "menu.settings.title": "Settings",
   "menu.settings.notifications": "Email notifications",
@@ -84,6 +85,7 @@
   "login.create.assignment.description": "You need to create a profile before you can create a job",
   "login.apply.assignment.title": "Search jobs",
   "login.apply.assignment.description": "You need to create a profile before you can search for a job",
+  "start.or": "or",
   "start.hero_section.slide_1": "Get help from friends you don't know",
   "start.hero_section.slide_2": "Help someone make a new start",
   "start.hero_section.slide_3": "Offer a newly arrived immigrant a job",
@@ -179,6 +181,7 @@
   "assignment.comments.description": "Write a comment",
   "assignment.more": "More jobs",
   "assignment.search": "Apply for assignment",
+  "assignment.preview.or": "or",
   "assignment.preview.title": "Preview",
   "assignment.preview.assignment": "Number of hours",
   "assignment.preview.hours": "Number of hours",
