--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -85,6 +85,10 @@
   "login.create.assignment.description": "You need to create a profile before you can create a job",
   "login.apply.assignment.title": "Search jobs",
   "login.apply.assignment.description": "You need to create a profile before you can search for a job",
+
+  "start.header.title": "Welcome!",
+  "start.header.body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+
   "start.hero_section.slide_1": "Get help from friends you don't know",
   "start.hero_section.slide_2": "Help someone make a new start",
   "start.hero_section.slide_3": "Offer a newly arrived immigrant a job",
